2015-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.10 released.

2015-06-25  c.hetherington  <cth@carlh.net>

	* Add decode debugging option.

2015-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.9 released.

2015-06-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.8 released.

2015-06-24  c.hetherington  <cth@carlh.net>

	* Bump libdcp for probable fix to various font ID problems (#620).

2015-06-23  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect saving of colour conversion settings (#618).

2015-06-21  Carl Hetherington  <cth@carlh.net>

	* Add some more video properties to the content properties
	dialogue.

	* Version 2.1.7 released.

2015-06-21  Carl Hetherington  <cth@carlh.net>

	* Prevent DCP creation if the project is set up to request
	non-burnt-in subtitles with text-subtitle content (#606).

	* Fix status message appearance on OS X (#615).

2015-06-19  Carl Hetherington  <cth@carlh.net>

	* Fix non-working audio analysis dialogue.

	* Version 2.1.6 released.

2015-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.5 released.

2015-06-18  c.hetherington  <cth@carlh.net>

	* Fix error when copying fonts into subtitles
	on Windows (#612).

	* Split job status onto two lines (#610).

	* Fix audio channel counts in DCP names when
	processors are in use (#609).

2015-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.4 released.

2015-06-18  Carl Hetherington  <cth@carlh.net>

	* Fixes to Linux .desktop files.

	* Stop playback when we reach the end of the film.

2015-06-16  c.hetherington  <cth@carlh.net>

	* Prevent selection of fewer DCP channels than
	are present in the output of an active processor (#611).

2015-06-15  Carl Hetherington  <cth@carlh.net>

	* Select newly-added content (#455).

2015-06-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.3 released.

2015-06-14  Carl Hetherington  <cth@carlh.net>

	* Fix parsing of .srt files with a Unicode
	byte-order-mark.
