@@ -276,25 +276,12 @@ Film::make_dcp ()
 		throw BadSettingError (_("name"), _("cannot contain slashes"));
 	}
 
-	bool must_burn = false;
-	ContentList cl = content ();
-	BOOST_FOREACH (shared_ptr<Content> c, cl) {
-		shared_ptr<SubtitleContent> sc = dynamic_pointer_cast<SubtitleContent> (c);
-		if (sc && sc->has_image_subtitles() && sc->use_subtitles() && !sc->burn_subtitles ()) {
-			must_burn = true;
-		}
-	}
-
-	if (must_burn) {
-		throw EncodeError (_("this project has content with image-based subtitles, which this version of DCP-o-matic cannot include as separate DCP subtitles.  To use these subtitles you must burn them into the image (tick the box in the Subtitles tab)."));
-	}
-
 	set_isdcf_date_today ();
 
 	environment_info (log ());
 
-	for (ContentList::const_iterator i = cl.begin(); i != cl.end(); ++i) {
-		LOG_GENERAL ("Content: %1", (*i)->technical_summary());
+	BOOST_FOREACH (shared_ptr<const Content> i, content ()) {
+		LOG_GENERAL ("Content: %1", i->technical_summary());
 	}
 	LOG_GENERAL ("DCP video rate %1 fps", video_frame_rate());
 	LOG_GENERAL ("%1 threads", Config::instance()->num_local_encoding_threads());
