@@ -1,3 +1,8 @@
+2015-06-25  c.hetherington  <cth@carlh.net>
+
+	* Disallow impossible burn settings by manipulating
+	the controls in the subtitle panel (#625).
+
 2015-06-25  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.10 released.
